# obuilder

./: .gitignore  .run-gha-tests.sh  README.md  copy.spec  dune-project  example-macos.spec  macOS.md  macos.sh  macos.spec  main.ml  obuilder-mac.opam  obuilder-spec.opam  obuilder-spec.opam.template  obuilder.opam
.github/workflows/: main.yml
lib/: btrfs_store.ml  build.ml  build_log.ml  db_store.ml  dune  macos_sandbox.ml  macos_sandbox.mli  obuilder.ml  os.ml  rsync_store.ml  rsync_store.mli  runc_sandbox.ml  runc_sandbox.mli  s.ml  sandbox.macos.ml  sandbox.mli  sandbox.runc.ml  store_spec.ml  zfs_store.ml  zfs_store.mli
lib_mac/: dune  macos_sandbox.mli
lib_spec/: action.ml  action.mli  docker.ml  dune  obuilder_spec.ml  spec.ml  spec.mli
stress/: stress.ml
test/: dune  mock_sandbox.ml  mock_sandbox.mli  test.ml
test/macos/: dune
test/specs/: build-log.spec
